Modif index file

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
                   <span id="imgPlayer3"></span></th>
                 </tr>
                 <tr>
-                  <th><p><img src="img/case.png" id = "side4" height="150px"></p>
+                  <th><p><img src="img/case.png" id = "side4" height="150px" width="150px"></p>
                   <span id="imgPlayer4"></span></th></th>
-                  <th><p><img src="img/case.png" id = "center5" height="150px"></p>
+                  <th><p><img src="img/case.png" id = "center5" height="150px" width="150px"></p>
                   <span id="imgPlayer5"></span></th></th></th>
-                  <th><p><img src="img/case.png" id = "side6" height="150px"></p>
+                  <th><p><img src="img/case.png" id = "side6" height="150px" width="150px"></p>
                   <span id="imgPlayer6"></span></th></th></th>
                 </tr>
                 <tr>
-                  <th><p><img src="img/case.png" id = "corner7" height="150px"></p>
+                  <th><p><img src="img/case.png" id = "corner7" height="150px" width="150px"></p>
                   <span id="imgPlayer7"></span></th></th></th>
-                  <th><p><img src="img/case.png" id = "side8" height="150px"></p>
+                  <th><p><img src="img/case.png" id = "side8" height="150px" width="150px"></p>
                   <span id="imgPlayer8"></span></th></th></th>
-                  <th><p><img src="img/case.png" id = "corner9" height="150px"></p>
+                  <th><p><img src="img/case.png" id = "corner9" height="150px" width="150px"></p>
                   <span id="imgPlayer9"></span></th></th></th>
                 </tr>
               </table>
